# CallOut

./: .gitignore  package-lock.json
Assets/Logos/: CallOut.psd
Docs/data_flow_diagram/: callout_dfd.drawio
Docs/db_schema_diagram/: db_schema.md  db_schema_v2.md  db_schema_v3.md
Docs/design_figma/: CallOut_v1.fig  (+1 more)
backend/: .gitignore  Cargo.toml  package-lock.json
backend/.sqlx/: query-3e480517d63af2e0a05ff943340a343343f802cbfe0333dedf5843dbab470617.json  query-60ea6e3f9ba6bdfebc3ee35d0fff21e92768a54ebb7a3e1d4636b39b9d897df6.json  query-973fefc79f99113b72f8388c01f692712959c696c9d6bd905cd8a48c9919e327.json
backend/migrations/: 20260310115451_initial_schema.sql  v1-utf8.sql
backend/migrations/snapshots/: v1.sql  v2.sql
backend/notes/: database_commands.md  docs.md
backend/old/: package.json
backend/old/src/: index.ts
backend/sql_commands/: create_database.sql  create_tables.sql  db_diagram_text.txt  fighters_table.sql  random.sql  schema.sql  sessions_table.sql
backend/src/: main.rs  state.rs
backend/src/admin/: admin.rs  mod.rs
backend/src/crypto/: crypto.rs  mod.rs
backend/src/fighters/: fighters.rs  mod.rs
backend/src/fighters/sql/: add_fighter.sql  add_fighter_seed.sql  get_fighters.sql
backend/src/logging/: logging.rs  mod.rs
backend/src/shb_error/: error.rs  mod.rs
backend/src/user_accounts/: mod.rs  session.rs  user_validation.rs  users.rs
backend/src/user_accounts/sql/: find_users.sql  insert_session.sql  insert_user.sql  retrieve_session.sql  revoke_session.sql
frontend/: index.html  package-lock.json  package.json
(+18 files in other folders)
