[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.7", features=["macros"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
sqlx = {version= "0.8.6", features= ["postgres", "runtime-tokio", "time"]}
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = {version = "0.6.6", features =["cors"]}
dotenv = "0.15.0"
argon2 = {version = "0.5.3" }
rand = {version= "0.8"}
thiserror = "2.0.17"
futures = "0.3.31"
regex = "1.12.2"
email_address = "0.2.9"
zxcvbn = "3.1.0"
mail-send = "0.5.2"
mail-builder = "0.4.4"
aes-gcm = "0.10.3"
hex = "0.4.3"
tower-cookies = "0.11.0"
time = "0.3.44"
rustls = { version = "0.23.35", features = ["ring"] }
axum-server = {version= "0.8.0", features=["tls-rustls"]}
